<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="183dp"
            app:srcCompat="@mipmap/ic_urania_foreground" />

        <TextView
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:ems="10"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30dp" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="29dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/username"
                android:textAlignment="center"
                android:textSize="15dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="214dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_username"
                android:padding="10dp"
                android:textSize="15dp" />
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="21dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="29dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/email"
                android:textAlignment="center"
                android:textSize="15dp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/et_email"
                android:layout_width="216dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_email"
                android:padding="10dp"
                android:textSize="15dp" />
        </LinearLayout>

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="131dp"
            android:background="@color/white" />

        <Button
            android:id="@+id/logButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#5767BD"
            android:onClick="register"
            android:text="@string/login_button" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>